--- a/.github/workflows/ml-ci-cd.yml
+++ b/.github/workflows/ml-ci-cd.yml
@@ -1,7 +1,7 @@
                                                
 name: Modelops deploy
 on:
-  push:
+push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
@@ -10,9 +10,16 @@ on:
 jobs:
   ml_ci_cd:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.8]
     steps:
-    - uses: actions/checkout@v2
-    - name: python version
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+          python-version: ${{ matrix.python-version }}
+    - name: list 
       run: python --version
 
 
