--- a/.github/workflows/ml-ci-cd.yml
+++ b/.github/workflows/ml-ci-cd.yml
@@ -1,11 +1,13 @@
 name: Modelops deploy
+
 on:
-push:
+  push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
   repository_dispatch:
     types: [ml_ci_cd]
+
 jobs:
   ml_ci_cd:
     runs-on: ubuntu-latest
@@ -13,12 +15,14 @@ jobs:
       matrix:
         python-version: [3.8]
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
+      - uses: actions/checkout@v3
+      
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
           python-version: ${{ matrix.python-version }}
-    - name: list 
-      run: python --version
+      
+      - name: List Python version
+        run: python --version
 
 
