--- a/.github/workflows/ml-ci-cd.yml
+++ b/.github/workflows/ml-ci-cd.yml
@@ -26,6 +26,9 @@ jobs:
         run: python --version
       - name: pip install
         run: pip install -r requirements.txt
+        
+      - name: train model
+        run: python model/train.py
 
 
 
